fix animated title being cut off

--- a/client-course-schedulizer/src/components/reuseables/animated/AnimateShowAndHide/AnimateShowAndHide.scss
+++ b/client-course-schedulizer/src/components/reuseables/animated/AnimateShowAndHide/AnimateShowAndHide.scss
@@ -11,7 +11,6 @@
 
 .show-and-hide-text {
   position: relative;
-  height: 110px;
   line-height: 110px;
   color: black;
   font-size: 8em;
@@ -23,5 +22,4 @@
 
 .show-and-hide-text > div {
   overflow: hidden;
-  padding-right: 2em;
 }
